codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_manual_compact_restates_realtime_start_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote manual /compact while realtime remains active: the next regular turn restates realtime-start instructions after compaction clears the baseline.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_request),])"
---
Scenario: Remote manual /compact while realtime remains active: the next regular turn restates realtime-start instructions after compaction clears the baseline.

## Remote Compaction Request
00:message/developer:<realtime_conversation>\nRealtime conversation started.\n\nYou a...
01:message/user:USER_ONE
02:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Compaction History Layout
00:compaction:encrypted=true
01:message/developer:<realtime_conversation>\nRealtime conversation started.\n\nYou a...
02:message/user:USER_TWO
