codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_pre_turn_compaction_restates_realtime_start_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote pre-turn auto-compaction while realtime remains active: compaction clears the reference baseline, so the follow-up request restates realtime-start instructions.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_request),])"
---
Scenario: Remote pre-turn auto-compaction while realtime remains active: compaction clears the reference baseline, so the follow-up request restates realtime-start instructions.

## Remote Compaction Request
00:message/developer:<realtime_conversation>\nRealtime conversation started.\n\nYou a...
01:message/user:USER_ONE
02:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Compaction History Layout
00:compaction:encrypted=true
01:message/developer:<realtime_conversation>\nRealtime conversation started.\n\nYou a...
02:message/user:USER_TWO
